# ftd-dd

./: README.md  pyproject.toml
src/builddd/: dd.py  linkml.py
src/ftddd/: dd.py  linkml.py
