[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ftd-dd"
authors = [
  { name = "Eric Torstenson", email = "eric.s.torstenson@vumc.org" }
]
description = "Extract FTD friendly data-dictionaries from various sources including LinkML models."
readme = "README.md"
requires-python = ">=3.10"

version = "0.0.1"

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "rich",
  "linkml>=1.9.1"
]


[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
linkml_extract_dd = "ftddd.linkml:cli"

